--- a/system-setup.yml
+++ b/system-setup.yml
@@ -49,6 +49,7 @@
           shell: |
             echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg] https://packages.microsoft.com/repos/code stable main" | sudo tee /etc/apt/sources.list.d/vscode.list > /dev/null
           when: not vscode_repo.stat.exists
+          register: vscode_repo_added
 
         - name: Check if Windsurf GPG key exists
           stat:
@@ -79,6 +80,7 @@
           shell: |
             echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/windsurf-stable.gpg] https://windsurf-stable.codeiumdata.com/wVxQEIWkwPUEAGf3/apt stable main" | sudo tee /etc/apt/sources.list.d/windsurf.list > /dev/null
           when: not windsurf_repo.stat.exists
+          register: windsurf_repo_added
 
         - name: Check if Slack GPG key exists
           stat:
@@ -109,6 +111,7 @@
           shell: |
             echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/slack.gpg] https://packagecloud.io/slacktechnologies/slack/debian/ jessie main" | sudo tee /etc/apt/sources.list.d/slack.list > /dev/null
           when: not slack_repo.stat.exists
+          register: slack_repo_added
 
         - name: Check if Docker GPG key exists
           stat:
@@ -139,6 +142,7 @@
           shell: |
             echo "deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
           when: not docker_repo.stat.exists
+          register: docker_repo_added
 
         - name: Check if GitHub CLI GPG key exists
           stat:
@@ -167,6 +171,7 @@
           shell: |
             echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
           when: not github_repo.stat.exists
+          register: github_repo_added
 
         - name: Clean up all temporary GPG files
           file:
@@ -186,6 +191,12 @@
     - name: Update apt cache after adding all repositories
       apt:
         update_cache: yes
+      when: >
+        (vscode_repo_added is changed) or
+        (windsurf_repo_added is changed) or
+        (slack_repo_added is changed) or
+        (docker_repo_added is changed) or
+        (github_repo_added is changed)
 
     - name: Install VS Code
       apt:
