--- a/system-setup.yml
+++ b/system-setup.yml
@@ -30,6 +30,7 @@
             dest: /tmp/microsoft.asc
             mode: '0644'
           when: not vscode_gpg_key.stat.exists
+          register: vscode_gpg_downloaded
 
         - name: Add VS Code GPG key to keyring
           shell: |
@@ -61,6 +62,7 @@
             dest: /tmp/windsurf.asc
             mode: '0644'
           when: not windsurf_gpg_key.stat.exists
+          register: windsurf_gpg_downloaded
 
         - name: Add Windsurf GPG key to keyring
           shell: |
@@ -92,6 +94,7 @@
             dest: /tmp/slack.asc
             mode: '0644'
           when: not slack_gpg_key.stat.exists
+          register: slack_gpg_downloaded
 
         - name: Add Slack GPG key to keyring
           shell: |
@@ -123,6 +126,7 @@
             dest: /tmp/docker.asc
             mode: '0644'
           when: not docker_gpg_key.stat.exists
+          register: docker_gpg_downloaded
 
         - name: Add Docker GPG key to keyring
           shell: |
@@ -154,6 +158,7 @@
             dest: /tmp/githubcli-archive-keyring.gpg
             mode: '0644'
           when: not github_gpg_key.stat.exists
+          register: github_gpg_downloaded
 
         - name: Install GitHub CLI GPG key to keyring
           shell: sudo install -D -o root -g root -m 644 /tmp/githubcli-archive-keyring.gpg /etc/apt/keyrings/githubcli-archive-keyring.gpg
@@ -186,6 +191,12 @@
             - /tmp/docker.asc
             - /tmp/docker.gpg
             - /tmp/githubcli-archive-keyring.gpg
+          when: >
+            (vscode_gpg_downloaded is defined and not vscode_gpg_downloaded.skipped | default(false)) or
+            (windsurf_gpg_downloaded is defined and not windsurf_gpg_downloaded.skipped | default(false)) or
+            (slack_gpg_downloaded is defined and not slack_gpg_downloaded.skipped | default(false)) or
+            (docker_gpg_downloaded is defined and not docker_gpg_downloaded.skipped | default(false)) or
+            (github_gpg_downloaded is defined and not github_gpg_downloaded.skipped | default(false))
 
     - name: Update apt cache after adding all repositories
       apt:
@@ -297,16 +308,21 @@
         - name: Check if gh CLI is authenticated
           shell: gh auth status --hostname github.com
           register: gh_auth_status
-          ignore_errors: true
+          failed_when: false
+          changed_when: false
 
-        - name: Authenticate gh CLI with GitHub if not already
-          shell: gh auth login --hostname github.com --web
-          when: gh_auth_status.rc != 0
-          args:
-            creates: ~/.config/gh/hosts.yml
+        - name: Display GitHub authentication status
+          debug:
+            msg: |
+              {% if gh_auth_status.rc == 0 %}
+              GitHub CLI is already authenticated.
+              {% else %}
+              GitHub CLI is not authenticated. To authenticate manually, run: gh auth login --hostname github.com --web
+              {% endif %}
 
         - name: Check if SSH key is already uploaded to GitHub
           shell: gh ssh-key list --json title,key | grep -F "$(cat ~/.ssh/id_ed25519.pub | cut -d' ' -f2)"
+          when: gh_auth_status.rc == 0
           register: gh_ssh_key_exists
           ignore_errors: true
 
