--- a/system-setup.yml
+++ b/system-setup.yml
@@ -328,6 +328,4 @@
 
         - name: Upload SSH key to GitHub if not present
           shell: gh ssh-key add ~/.ssh/id_ed25519.pub --title "$(hostname)"
-          when: gh_ssh_key_exists.rc != 0
-          args:
-            creates: ~/.ssh/id_ed25519.pub
+          when: gh_auth_status.rc == 0 and (gh_ssh_key_exists is not defined or gh_ssh_key_exists.rc != 0)
